@@ -1,3 +1,12 @@
+2000-02-05  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-libgtop-types.m4 (AC_LIBGTOP_CHECK_TYPE): New macro. This
+	is an improved version of AC_CHECK_TYPE which takes into account
+	that we need to #include some other header files on some systems
+	to get some types.
+	(GNOME_LIBGTOP_TYPES): Check for <sys/bitypes.h> for Tru64 and
+	use AC_LIBGTOP_CHECK_TYPE rather than AC_CHECK_TYPE.
+
 1999-09-01  Havoc Pennington  <hp@pobox.com>
 
 	* gnome-xml-check.m4: If you're going to AC_PATH_PROG then use the
